cloudformation.yaml
Metadata:
  TemplateId: arn:aws:cloudformation:eu-west-2:308323730593:generatedTemplate/66f73d22-85a0-4f4b-946a-020ffa37e0e4
Resources:
  EC2VolumeAttachment00vol0e30b92f0689a811100Yb2rs:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::VolumeAttachment
    DeletionPolicy: Retain
    Properties:
      InstanceId: i-00ee52c11cff9cc85
      VolumeId: vol-0e30b92f0689a8111
      Device: /dev/sda1
  EC2Volume00vol0e30b92f0689a811100aH2F8:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Volume
    DeletionPolicy: Retain
    Properties:
      MultiAttachEnabled: false
      SnapshotId: snap-06ee67e2e3bd10fb9
      VolumeType: gp3
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZone: eu-west-2a
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2SecurityGroup00sg0655e8b33bf7af7af00wQq8V:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Retain
    Properties:
      GroupDescription: launch-wizard-7 created 2024-09-25T10:55:53.748Z
      GroupName: launch-wizard-7
      VpcId: !Ref EC2VPC00vpc08f8078d68cf64f51007Ww5I
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIpv6: '::/0'
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIpv6: '::/0'
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIpv6: '::/0'
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: '-1'
          FromPort: -1
          ToPort: -1
        - CidrIpv6: '::/0'
          IpProtocol: '-1'
          FromPort: -1
          ToPort: -1
  EC2NetworkInterface00eni08eded2746183a58000bueld:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::NetworkInterface
    DeletionPolicy: Retain
    Properties:
      Description: ''
      PrivateIpAddress: 172.31.27.52
      PrivateIpAddresses:
        - PrivateIpAddress: 172.31.27.52
          Primary: true
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
        - sg-0655e8b33bf7af7af
      Ipv6Prefixes: []
      SubnetId: !Ref EC2Subnet00subnet0c7cafca152f23ae600ZGnSy
      SourceDestCheck: true
      InterfaceType: interface
      Tags: []
  EC2Instance00i00ee52c11cff9cc8500YsEUm:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Instance
    DeletionPolicy: Retain
    Properties:
      Tenancy: default
      SecurityGroups:
        - launch-wizard-7
      PrivateIpAddress: 172.31.27.52
      InstanceInitiatedShutdownBehavior: stop
      CpuOptions:
        ThreadsPerCore: 1
        CoreCount: 1
      BlockDeviceMappings:
        - Ebs:
            SnapshotId: snap-06ee67e2e3bd10fb9
            VolumeType: gp3
            Iops: 3000
            VolumeSize: 8
            Encrypted: false
            DeleteOnTermination: true
          DeviceName: /dev/sda1
      AvailabilityZone: eu-west-2a
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: true
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      SubnetId: !Ref EC2Subnet00subnet0c7cafca152f23ae600ZGnSy
      SecurityGroupIds:
        - sg-0655e8b33bf7af7af
      EbsOptimized: false
      DisableApiTermination: false
      KeyName: dan-access
      SourceDestCheck: true
      Volumes:
        - VolumeId: vol-0e30b92f0689a8111
          Device: /dev/sda1
      PlacementGroupName: ''
      VpcId: vpc-08f8078d68cf64f51
      State:
        Code: '16'
        Name: running
      NetworkInterfaces:
        - PrivateIpAddresses:
            - PrivateIpAddress: 172.31.27.52
              Primary: true
          SecondaryPrivateIpAddressCount: 0
          DeviceIndex: '0'
          GroupSet:
            - !Ref EC2SecurityGroup00sg0655e8b33bf7af7af00wQq8V
          Ipv6Addresses: []
          SubnetId: !Ref EC2Subnet00subnet0c7cafca152f23ae600ZGnSy
          AssociatePublicIpAddress: true
          NetworkInterfaceId: !Ref EC2NetworkInterface00eni08eded2746183a58000bueld
          DeleteOnTermination: true
      ImageId: ami-01ec84b284795cbc7
      InstanceType: t2.micro
      Monitoring: false
      Tags:
        - Value: epa-project-web-server
          Key: Name
      CreditSpecification:
        CPUCredits: standard
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          
          git clone https://github.com/danhavercroft/epa-project.git /root/epa-project
          cd /root/epa-project
          sh ./1st-script-git-setup.sh
  EC2VPC00vpc08f8078d68cf64f51007Ww5I:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::VPC
    DeletionPolicy: Retain
    Properties:
      CidrBlock: 172.31.0.0/16
      EnableDnsSupport: true
      InstanceTenancy: default
      EnableDnsHostnames: true
      Tags: []
  EC2Subnet00subnet0c7cafca152f23ae600ZGnSy:
    UpdateReplacePolicy: Retain
    Type: AWS::EC2::Subnet
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref EC2VPC00vpc08f8078d68cf64f51007Ww5I
      MapPublicIpOnLaunch: true
      EnableDns64: false
      AvailabilityZoneId: euw2-az2
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 172.31.16.0/20
      Ipv6Native: false
      Tags: []
